--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -98,9 +98,9 @@ autocfg = "1.1"
 
 [dependencies]
 tokio-macros = { version = "~2.0.0", path = "../tokio-macros", optional = true }
-
+rand = "0.8.0"
 pin-project-lite = "0.2.0"
-
+backtrace = "0.3"
 # Everything else is optional...
 bytes = { version = "1.0.0", optional = true }
 mio = { version = "0.8.4", optional = true }
